--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ header {
   margin: 0;
   background-color: black;
   border-bottom: 2px solid white;
+  z-index: 2;
 }
 
 .headerMain {
@@ -158,12 +159,12 @@ main {
   color: black;
   border-style: hidden;
   border-radius: 10px;
-  padding: 25px;
+  padding: 50px;
 }
 
 /* My Work section */
 
-#myWork a {
+.card {
    flex: 25%;
    height: 155px;
    border: 3px double white;
@@ -172,10 +173,13 @@ main {
    background-size: cover;
    background-position: center center;
    margin-top: 10px;
+   position: relative;
 }
 
-#myWork a:hover {
-  background-color: #333;
+.card:hover .cardTitle {
+  color: black;
+  background-color: white;
+  /* background-color: #333; */
 }
 
 #myWork .cardContent {
@@ -187,6 +191,50 @@ main {
   flex: 0 0 100%;
   height: 238px;
   margin: 0;
+}
+
+
+
+.cardTitle {
+  background-color: black;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  border-top-left-radius: 7px;
+  padding: 5px 10px;
+  position: absolute;
+  top: auto;
+  left: auto;
+}
+
+.gitHub {
+  background-color: black;
+  border-right: 1px solid white;
+  border-top: 1px solid white;
+  border-bottom-left-radius: 7px;
+  padding: 5px 0px;
+  position: absolute;
+  bottom: 0;
+  left: auto;
+}
+
+.gitHub a {
+  padding: 5px 20px;
+  /* border-bottom-left-radius: inherit; */
+  margin: 0;
+}
+
+.gitHub:hover {
+  color: black;
+  background-color: white;
+}
+
+.gitHub:hover ~ .cardTitle{
+  color: white;
+  background-color: #333;
+}
+
+#interActor {
+  /* position: relative; */
 }
 
 #linkGitHub {
